Updated Accumulator to class